# dotfiles

./: .gitattributes  .gitignore  .gitmodules  README.md  pkglist.txt
alacritty/.config/alacritty/: alacritty.yml
anyrun/.config/anyrun/: config.ron  dictionary.ron
bars/.config/eww/: eww.scss  eww.yuck
bars/.config/waybar/: config  style.css
calendars/.config/khal/: config
calendars/.config/vdirsyncer/: config
cava/.config/cava/: config
conky-autostart-script/.config/autostart/: assignments-conky.desktop  myconky.desktop
cpbooster/.config/cpbooster/: cpbooster-config.json
dunst/.config/dunst/: dunstrc
dunst/.config/dunst/scripts/: CMakeLists.txt  notificationLogger.cpp  notificationLogger.sh
fish/.config/fish/: config.fish  fish_variables
gh-dash/.config/gh-dash/: config.yml
hyprland/.config/hypr/: hyprland.conf  hyprpaper.conf
i3/.config/i3/: config
kitty/.config/kitty/: Amarena.conf  Ephemeral.conf  LoveLace.conf  Nord.conf  SkyFall.conf  Sweetified.conf  kitty.conf
mail/.config/mutt/: mailcap  muttrc  passwords.gpg
misc/.config/misc/: README.md  searx-tokyo-night.user.css  searx-tokyo-night.user.js
mpd/.config/mpd/: mpd.conf  mpd.db  mpd_state
music/.config/cava/: config
music/.config/mopidy/: mopidy.conf
music/.config/mpd/: mpd.conf  mpd.db  mpd_state
music/.config/ncmpcpp/: config
ncmpcpp/.config/ncmpcpp/: config
picom/.config/picom/: picom-pijulius.conf.bak  picom.conf  picom.conf.bak
pipewire/.config/pipewire/: pipewire.conf.bak
polybar/.config/polybar/: config.ini  launch.sh
rofi/.config/rofi/: colors.rasi  config.rasi  confirm.rasi  message.rasi  notiCenter.rasi  powermenu.rasi
shells/.config/fish/: config.fish  fish_variables
starship/.config/: starship.toml
terminals/.config/alacritty/: alacritty.yml
terminals/.config/wezterm/: 2  (+2 more)
(+104 files in other folders)
